# ChangeLog for net-im/qtwitter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qtwitter-9999.ebuild:
  Updating to comply with changes in buildsystem

  27 Sep 2009; Dominik Kapusta <ayoy@gentoo.org> qtwitter-9999.ebuild:
  Updated DEPENDS to require Qt 4.5 at least. Added new qt-dbus dependency.

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> -qtwitter-0.9.0.ebuild,
  qtwitter-9999.ebuild, metadata.xml:
  0.9.0 on tree. Removed oauth from USE for the live ebuild.

*qtwitter-0.9.0 (10 Sep 2009)

  10 Sep 2009; Dominik Kapusta <d@ayoy.net> +qtwitter-0.9.0.ebuild,
  qtwitter-9999.ebuild:
  Version bump

  19 Aug 2009; Dominik Kapusta <d@ayoy.net> qtwitter-9999.ebuild:
  Added Czech translation.

  08 Aug 2009; Markos Chandras <hwoarang@gentoo.org> -qtwitter-0.8.3.ebuild:
  On tree

*qtwitter-0.8.3 (08 Aug 2009)

  08 Aug 2009; Dominik Kapusta <d@ayoy.net> +qtwitter-0.8.3.ebuild,
  qtwitter-9999.ebuild:
  Version bump, now depends on dev-libs/qoauth-1.0. Updated live ebuild.

  14 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -qtwitter-0.8.0.ebuild:
  On tree

*qtwitter-0.8.0 (13 Jul 2009)

  13 Jul 2009; Dominik Kapusta <d@ayoy.net> +qtwitter-0.8.0.ebuild,
  qtwitter-9999.ebuild:
  Version bump, with optional dependency on dev-libs/qoauth

  25 Jun 2009; Dominik Kapusta <d@ayoy.net> qtwitter-9999.ebuild,
  metadata.xml:
  Added oauth USE flag, changed LICENSE and updated DESCRIPTION. Maintainer
  changed to Dominik Kapusta <d@ayoy.net>.

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qtwitter-9999.ebuild:
  Sync with portage package

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  -qtwitter-0.6.0-r1.ebuild:
  On tree now

*qtwitter-0.6.0-r1 (29 Apr 2009)

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qtwitter-0.6.0-r1.ebuild, -qtwitter-0.6.0.ebuild:
  Fixing SRC_URI,LICENSE. Dropping broken ebuild

*qtwitter-0.6.0 (28 Apr 2009)
