@@ -1,3 +1,3 @@
-EBUILD qtwitter-9999.ebuild 1380 RMD160 90285aed47fd22438d2d1adea5042c2a9a6131e2 SHA1 25fcafc003b5daf8b95f9323ce36eda5d136afb9 SHA256 29b67531e83e94df5bf74a5c036c54ce2c8390c73215da16dd6b408ae557d81b
-MISC ChangeLog 3352 RMD160 5fb8c48f598b9e5dc85b9fbf286236cc709100ab SHA1 b4cb7ca5d27ec266ecbc6926d795eb41147e0eb5 SHA256 10b69df8ff70ec5f5e87f202f77c749fd096b3121c85d80c7d9420b1477a08f0
+EBUILD qtwitter-9999.ebuild 1403 RMD160 5c4db8280c446606795e1f8aa9749cb5375fdb39 SHA1 0bf5d8cd8954db087ab5b065ee16729c5f397d51 SHA256 d82cc2ed0aacf8ba1e7aa8fc28cb350d90522cf329d5033a4ca893e9ed73f704
+MISC ChangeLog 3486 RMD160 dc1c4cb5db92885db6ed4805aa782ebcdf0bb02e SHA1 ee49a1ab550e3103c70e2e8f397f2f9cf10aece0 SHA256 1c539545036086654106a09e45b99d9b35f0ef0089f11b5444feda67f62ea194
 MISC metadata.xml 285 RMD160 4d6c5f6a2bd373cfe580a804ba94be14fc5dfe66 SHA1 8eb3b5d4234024fafdf14c58b19de430ba2c3f60 SHA256 bf264aae9c3905d59e7856f76206208c87f5d0dcf8676b488be4f3501b417ce1
